ability to add and update competencies via course api
